[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudecode-backup"
version = "0.1.0"
description = "Backup, export and import Claude Code conversation history"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "claudecode-backup" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "flask>=3.0.0",
    "PySide6>=6.7.0",
]

[project.scripts]
claudecode-backup = "claudecode_backup.cli:app"

[tool.setuptools.packages.find]
include = ["claudecode_backup*"]
